--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,9 @@ on:
 
 jobs:
   build:
+    name: Run build
     run-on: ubuntu-latest
     steps:
       -
         name: docker build
         run: docker build . -t entropy
-      -
