--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: [ubuntu-latest]
     steps:
       -
+        name: Checkout project
+        uses: actions/checkout@v2
+      -
         name: Build
         run: |
-          ls -hal
+         docker build -t entropy .
